# stats-ci

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE.md  README.md  TODO.md  deny.toml
.github/workflows/: tests.yml
benches/: bench_kahan.rs  bench_mean_ci.rs
examples/: bench_mean_ci.rs  mean_median.rs  proportions.rs  readme.rs  runtime.rs
examples/readme/: main.rs  rustfmt.toml
resources/: docs-header.html
src/: comparison.rs  confidence.rs  error.rs  interval.rs  lib.rs  mean.rs  proportion.rs  quantile.rs  stats.rs  utils.rs
tests/: accuracy_mean.rs  accuracy_proportion.rs  compare_numpy.rs
tests/cases/: generate_cases.py
tests/common/: mod.rs
