[package]
name = "stats-ci"
version = "0.0.6"
edition = "2021"

repository = "https://github.com/xdefago/stats-ci"
documentation = "https://docs.rs/stats-ci/"

authors = ["xdefago"]

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "Computing confidence intervals on various data for Rust."
keywords = ["math", "statistics", "stats", "sampling", "analysis"]
categories = ["mathematics", "science", ]


[features]
default = []
serde = ["dep:serde"]

[[bench]]
name = "bench_mean_ci"
harness = false


[dependencies]
statrs = "0.16.0"
num-traits = "0.2.15"

thiserror = "1.0.30"
lazy_static = "1.4.0"

serde = { version = "1.0", optional = true, features = ["derive"] }

# dependencies for tests
[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_chacha = "0.3.1"
nu-ansi-term = "0.47"
# serde/toml used to load test data
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
lazy-regex = "2.5.0"
criterion = "0.4.0"
rayon = "1.7.0"
