[package]
name = "stats-ci"
version = "0.1.2"
edition = "2021"

repository = "https://github.com/xdefago/stats-ci"
documentation = "https://docs.rs/stats-ci/"

authors = ["xdefago"]

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "A pure Rust library for computing and working with confidence intervals on sample data."
keywords = ["math", "statistics", "stats", "sampling", "analysis"]
categories = ["mathematics", "science", ]

[features]
default = ["approx", "std"]
serde = ["dep:serde"]
approx = ["dep:approx"]
# std is actually still a mandatory feature. The current issue is with errors,
# core::error::Error is still only available as a nightly-only feature.
# This should change soon; probably as rustc 1.79.0 is released.
# After that, it is likely that thiserror will in turn support no_std.
std = ["arrayvec/std"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./resources/docs-header.html" ]

[[bench]]
name = "bench_mean_ci"
harness = false

[[bench]]
name = "bench_kahan"
harness = false


[dependencies]
statrs = "0.18.0"
num-traits = "0.2.15"

thiserror = "2.0.6"
lazy_static = "1.4.0"

arrayvec = { version = "0.7.4", default-features = false }

serde = { version = "1.0", optional = true, features = ["derive"] }
approx = { version = "0.5.1", optional = true }


# dependencies for tests
[dev-dependencies]
rand = "0.8.5"
rand_seeder = "0.3.0"
rand_chacha = "0.3.1"
nu-ansi-term = "0.50"
# serde/toml used to load test data
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
lazy-regex = "3.1.0"
criterion = "0.5.1"
rayon = "1.10.0"
